Added ability to cancel signature process.

--- a/web/viewer.html
+++ b/web/viewer.html
@@ -417,6 +417,9 @@ See https://github.com/adobe-type-tools/cmap-resources
 
             <div class="signature-pad--actions">
               <div>
+                <button type="button" class="button clear" data-action="break">Vorgang abbrechen</button>
+              </div>
+              <div>
                 <button type="button" class="button clear" data-action="clear">Unterschriftenfeld leeren</button>
               </div>
               <div>
